my-apps/homarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  parentRefs:
  - name: gateway-internal
    namespace: gateway
    sectionName: https
  - name: gateway-internal
    namespace: gateway
    sectionName: http
  hostnames:
  - "dash.mvt.com.ar"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homarr
      port: 7575
